Fixed layout issue in landing page

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,8 @@ body {
     background-image: url("../images/Dashboard.svg");
     background-size: cover;
     background-position: right bottom;
+    display: flex;
+    flex-direction: column;
 
     .header {
       height: 60px;
@@ -47,13 +49,14 @@ body {
       margin-top: 30px;
       display: flex;
       justify-content: center;
+      flex-grow: 1;
 
       .col {
         display: flex;
         flex-direction: row;
         justify-content: center;
         width: 48%;
-        height: 500px;
+        height: 100%;
         .col-chart {
           background-color: #ffff;
           flex-grow: 1;
